Fix margin value for wrap-image-block class
Reduced wrap-image-block bottom margin to remove white space between modal text and gallery.

--- a/CSS/html-templates.css
+++ b/CSS/html-templates.css
@@ -725,7 +725,7 @@
 
 .wrap-image-block {
   width: 100%;                 /* Full width of the page content column */
-  margin: 0 0 3rem 0;          /* Space below each component instance */
+  margin: 0 0 -3rem 0;          /* Space below each component instance */
 }
 
 /* Title row */
